<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C6A6A"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:text="@string/open"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:text="@string/cto"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:text="@string/cts"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:text="@string/save_as"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:text="@string/ctfs"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ACA8A8"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6C6A6A"
            android:text="@string/imp"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ACA8A8"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:background="#6C6A6A"
            android:text="@string/emp"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:background="#6C6A6A"
            android:gravity="right"
            android:text="@string/cte"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6C6A6A"
            android:text="@string/quit"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </TableRow>

</LinearLayout>