<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:backgroundTint="#F44336"
        android:text="@string/button_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:backgroundTint="#FF9800"
        android:text="@string/button_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="101dp"
        android:layout_height="72dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/button_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="92dp"
        android:layout_height="78dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/button20"
        android:layout_width="92dp"
        android:layout_height="78dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/button_green"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button22"
        android:layout_width="92dp"
        android:layout_height="78dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#7F1C8F"
        android:text="@string/button_indigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button23"
        android:layout_width="412dp"
        android:layout_height="50dp"
        android:backgroundTint="#D55AEA"
        android:text="@string/button_violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button17"
        app:layout_constraintVertical_bias="0.39" />
</android.support.constraint.ConstraintLayout>